# adu-reviews-scraper-test

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .ruff.toml  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt  response.html  results.html  results.json
.actor/: Dockerfile  actor.json  input_schema.json
.devcontainer/: devcontainer.json
compose/: stack.yml
config/: config.template.toml
docker/: Dockerfile  Dockerfile.production
scraper/core/configs/: __init__.py  base.py  dev.py  prod.py
scraper/core/providers/: configs.py  connection.py  factory.py  managers.py
scraper/infrastructure/storage/: base.py  local_storage.py  s3_storage.py
scraper/main/cli/: app.py  factory.py
scraper/schemas/: location.py  search.py
scraper/services/collector/: base.py  reviews_scraper.py
scraper/utils/: headers.py
scripts/: format.sh  lint.sh
scripts/infra/: build_production.sh
src/: __main__.py
src/core/: async_typer.py
src/core/configs/: __init__.py  base.py  dev.py  prod.py
src/core/providers/: configs.py  connection.py  factory.py  managers.py
src/infrastructure/storage/: local_storage.py  s3_storage.py
src/main/cli/: app.py  factory.py
src/presentation/: request_handler.py
src/schemas/: base.py  location.py  place.py  search.py
src/schemas/collector/: location.py  place.py  search.py
src/services/collector/: base.py  reviews_scraper.py
src/utils/: constants.py  headers.py
