[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Adu Scraping Reviews"
authors = ["Hiep Tran <ext.hiep.tran@truedigital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.1"
typer = "^0.13.1"
loguru = "^0.7.2"
bs4 = "^0.0.2"
asyncer = "^0.0.8"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
dishka = "^1.4.1"
mypy-boto3-s3 = "^1.35.61"
boto3 = "^1.35.66"
botocore = "^1.35.66"
redis = "^5.2.0"
boto3-stubs = "^1.35.67"
botocore-stubs = "^1.35.67"
shortuuid = "^1.0.13"
fake-useragent = "^2.0.0"
aiohttp = "^3.11.9"
types-beautifulsoup4 = "^4.12.0.20241020"
httpx = {extras = ["brotli", "http2"], version = "^0.28.1"}
parsel = "^1.9.1"
requests-html = "^0.10.0"
lxml-html-clean = "^0.4.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.10.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
flake8 = "^7.1.1"
pre-commit = "3.8.0"
ruff = "^0.6.9"
pytest = "^8.2.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
taskiq = {extras = ["reload"], version = "^0.11.7"}
deptry = "^0.21.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape = "scraper.main.cli.app:run_cli"
